--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="fluid-container">
-  <div class="row">
-    <div class="col-md-8">
+  <div class="row marginSetting">
+    <div class="col-md-8 mt-2">
       <div class="card">
         <div class="card-body">
           <kendo-grid
@@ -23,7 +23,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 searchCard">
       <div class="row searchBoarder">
         <h6 class=""><b>Search</b></h6>
       </div>
@@ -64,7 +64,9 @@
         <div class="row ">
             <div class="col-md-12">
               <div class="form-group">
-                <select class="form-control form-control-sm"></select>
+                <select class="form-control form-control-sm">
+                  <option value="All" > All </option>
+                </select>
               </div>
             </div>
           </div>
@@ -72,7 +74,10 @@
           <div class="row ">
               <div class="col-md-12">
                 <div class="form-group">
-                  <select class="form-control form-control-sm"></select>
+                  <select class="form-control form-control-sm">
+                    <option value="All" > All </option>
+                  </select>
+
                 </div>
               </div>
             </div>
@@ -80,12 +85,15 @@
             <div class="row ">
                 <div class="col-md-12">
                   <div class="form-group">
-                    <select class="form-control form-control-sm"></select>
+                    <select class="form-control form-control-sm">
+                      <option value="All" > All </option>
+                    </select>
+
                   </div>
                 </div>
               </div>
               <div class="searchBoarder"></div>
-              <div class="col-md-12 mt-2">
+              <div class="col-md-12 mt-2 mb-4">
                   <button type="button" class="btn btn-primary">Search</button>
                   <button type="button" class="btn btn-secondary ml-2 ">Reset</button>
 
