--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,3 +1,9 @@
 .searchBoarder{
   border-bottom: 1px solid black;
 }
+.marginSetting{
+  margin: 0 !important;
+}
+.searchCard{
+  border: 1px solid #e6d9d9;
+}
