--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -3,22 +3,42 @@
     <div class="col-md-8 mt-2">
       <div class="card">
         <div class="card-body">
+          <div class="row">
+              <!-- <div class="col-md-1">
+                     <label for="exampleInputEmail1"> Show</label><br>
+              </div> -->
+              <div class="col-md-2 mb-2">
+                  Show
+                     <select style="height: 25px;" [(ngModel)]="pageSizeNumber" (ngModelChange)="pageValueChange()">
+                       <option value=5 >5</option>
+                       <option  value=10 selected >10</option>
+                       <option  value=25 >25</option>
+                     </select>entries
+              </div>
+
+
+          </div>
+
           <kendo-grid
             [kendoGridBinding]="gridData"
-            [pageSize]="10"
+            [pageSize]="pageSizeNumber"
             [pageable]="true"
             [sortable]="true"
+            [filterable]="true"
           >
-            <kendo-grid-column field="Title" [width]="140"></kendo-grid-column>
+            <kendo-grid-column field="Model" [width]="140"></kendo-grid-column>
             <kendo-grid-column
-              field="Start Date"
+              field="Product"
               [width]="120"
             ></kendo-grid-column>
             <kendo-grid-column
-              field="End Date"
+              field="ProductType"
               [width]="100"
             ></kendo-grid-column>
-            <kendo-grid-column field="Status" [width]="130"></kendo-grid-column>
+            <kendo-grid-column field="OEM" [width]="130"></kendo-grid-column>
+            <kendo-grid-column field="EOSL Date" [width]="130"></kendo-grid-column>
+            <kendo-grid-column field="PublishedDate" [width]="130"></kendo-grid-column>
+            <kendo-grid-column field="AlternateName" [width]="130"></kendo-grid-column>
           </kendo-grid>
         </div>
       </div>
