--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,10 +3,10 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link"  [routerLink]="['/dashboard']" routerLinkActive="class1">Dashboard</a>
       <a class="nav-item nav-link" [routerLink]="['/services']" routerLinkActive="class1" >Services</a>
-      <a class="nav-item nav-link" >OEMs</a>
-      <a class="nav-item nav-link" >Product Types</a>
-      <a class="nav-item nav-link" >Products</a>
-      <a class="nav-item nav-link" >Models</a>
+      <a class="nav-item nav-link" [routerLink]="['/oems']" routerLinkActive="class1">OEMs</a>
+      <a class="nav-item nav-link" [routerLink]="['/productTypes']" routerLinkActive="class1">Product Types</a>
+      <a class="nav-item nav-link" [routerLink]="['/products']" routerLinkActive="class1">Products</a>
+      <a class="nav-item nav-link" [routerLink]="['/models']" routerLinkActive="class1">Models</a>
       <a class="nav-item nav-link" [routerLink]="['/search']" routerLinkActive="class1">Search</a>
     </div>
   </div>
