--- a/src/app/models/models.component.html
+++ b/src/app/models/models.component.html
@@ -163,6 +163,7 @@
         [pageSize]="5"
         [pageable]="true"
         [sortable]="true"
+        [filterable]="true"
        >
         <kendo-grid-column field="Title" [width]="140"></kendo-grid-column>
         <kendo-grid-column field="Start Date" [width]="120"></kendo-grid-column>
