--- a/src/app/oems/oems.component.html
+++ b/src/app/oems/oems.component.html
@@ -88,6 +88,7 @@
       [pageSize]="5"
       [pageable]="true"
       [sortable]="true"
+      [filterable]="true"
      >
       <kendo-grid-column field="Title" [width]="140"></kendo-grid-column>
       <kendo-grid-column field="Title" [width]="140"></kendo-grid-column>
