--- a/src/app/product-types/product-types.component.html
+++ b/src/app/product-types/product-types.component.html
@@ -61,6 +61,7 @@
       [pageSize]="5"
       [pageable]="true"
       [sortable]="true"
+      [filterable]="true"
      >
       <kendo-grid-column field="Title" [width]="140"></kendo-grid-column>
       <kendo-grid-column field="Title" [width]="140"></kendo-grid-column>
